--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       a {
         text-decoration: none;
-        color: #e8fbfa;
+        color: #000000;
         font-size: 16px;
       }
 
@@ -184,7 +184,7 @@
           role="presentation"
           style="
             background-color: #fafdfe;
-            color: #565656;
+            color: #000000;
             margin: 0;
             padding: 0;
             max-width: 600px;
@@ -203,7 +203,7 @@
                 role="presentation"
               >
                 <tr>
-                  <td>
+                  <td align="center" style="padding: 20px 0 32px">
                     <a href="https://ya.ru" target="_blank" rel="noopener">
                       <img
                         src="https://i.ibb.co/zW6F8gX6/millala.png"
@@ -213,15 +213,394 @@
                     /></a>
                   </td>
                 </tr>
+                <!-- one-section -->
+                <tr>
+                  <td
+                    align="center"
+                    style="padding: 0 100px 24px"
+                    class="mobile-col-padding"
+                  >
+                    <h1 style="margin: 0; font-weight: 400; font-size: 24px">
+                      Lorem ipsum dolor sit amet dolor viverra
+                    </h1>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="center"
+                    style="padding: 0 120px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 157%;
+                        color: rgba(0, 0, 0, 0.7);
+                      "
+                    >
+                      Fermentum ipsum justo amet, pellentesque natoque felis.
+                      Nisl, enim purus ultrices molestie nunc odio.
+                    </p>
+                  </td>
+                </tr>
               </table>
+            </td>
+          </tr>
+          <!-- two-section -->
+
+          <tr>
+            <td
+              align="center"
+              style="padding: 0 28px; font-size: 0"
+              class="mobile-padding two-columns"
+            >
+              <!--[if (gte mso 9) | (IE)]>
+          <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation" >
+          <tr>
+          <td>
+        <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td>
+                          <img
+                            src="https://i.ibb.co/C55rq30k/img1.png"
+                            alt="headphones"
+                            border="0"
+                            width="250"
+                          />
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+               <td>
+               <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td style="padding: 0 0 16px 0">
+                          <h2
+                            style="
+                              margin: 0;
+                              font-weight: 700;
+                              font-size: 18px;
+                              line-height: 122%;
+                            "
+                          >
+                            Lorem ipsum
+                          </h2>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p
+                            style="
+                              margin: 0;
+                              font-weight: 400;
+                              font-size: 14px;
+                              line-height: 157%;
+                            "
+                          >
+                            Fermentum ipsum justo amet, pellentesque natoque
+                            felis. Nisl, enim purus ultrices molestie nunc odio.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+              </tr>
+              </table>
+              <![endif]-->
+            </td>
+          </tr>
+          <tr>
+            <td
+              align="center"
+              style="padding: 0 28px; font-size: 0"
+              class="mobile-padding two-columns"
+            >
+              <!--[if (gte mso 9) | (IE)]>
+          <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation" >
+          <tr>
+          <td>
+        <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td>
+                          <img
+                            src="https://i.ibb.co/d47bwYw1/img2.png"
+                            alt="headphones"
+                            border="0"
+                            width="250"
+                          />
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+               <td>
+               <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td style="padding: 0 0 16px 0">
+                          <h2
+                            style="
+                              margin: 0;
+                              font-weight: 700;
+                              font-size: 18px;
+                              line-height: 122%;
+                            "
+                          >
+                            Lorem ipsum
+                          </h2>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p
+                            style="
+                              margin: 0;
+                              font-weight: 400;
+                              font-size: 14px;
+                              line-height: 157%;
+                            "
+                          >
+                            Fermentum ipsum justo amet, pellentesque natoque
+                            felis. Nisl, enim purus ultrices molestie nunc odio.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+              </tr>
+              </table>
+              <![endif]-->
+            </td>
+          </tr>
+          <tr>
+            <td
+              align="center"
+              style="padding: 0 28px; font-size: 0"
+              class="mobile-padding two-columns"
+            >
+              <!--[if (gte mso 9) | (IE)]>
+          <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation" >
+          <tr>
+          <td>
+        <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td>
+                          <img
+                            src="https://i.ibb.co/9kqNMTwd/img3.png"
+                            alt="headphones"
+                            border="0"
+                            width="250"
+                          />
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+               <td>
+               <![endif]-->
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+                style="
+                  vertical-align: middle;
+                  width: 100%;
+                  max-width: 270px;
+                  display: inline-block;
+                "
+              >
+                <tr>
+                  <td style="padding: 11px" class="mobile-col-padding">
+                    <table
+                      border="0"
+                      cellpadding="0"
+                      cellspacing="0"
+                      role="presentation"
+                    >
+                      <tr>
+                        <td style="padding: 0 0 16px 0">
+                          <h2
+                            style="
+                              margin: 0;
+                              font-weight: 700;
+                              font-size: 18px;
+                              line-height: 122%;
+                            "
+                          >
+                            Lorem ipsum
+                          </h2>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p
+                            style="
+                              margin: 0;
+                              font-weight: 400;
+                              font-size: 14px;
+                              line-height: 157%;
+                            "
+                          >
+                            Fermentum ipsum justo amet, pellentesque natoque
+                            felis. Nisl, enim purus ultrices molestie nunc odio.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!--[if (gte mso 9) | (IE)]>
+              </td>
+              </tr>
+              </table>
+              <![endif]-->
             </td>
           </tr>
         </table>
         <!--[if (gte mso 9) | (IE)]>
-          </td>
-          </tr>
-          </table>
-        <![endif]-->
+            </td>
+            </tr>
+            </table>
+         <![endif]-->
       </div>
     </center>
   </body>
