--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         }
 
         .mobile-padding {
-          padding-left: 10px !important;
-          padding-right: 10px !important;
+          padding-left: 5px !important;
+          padding-right: 5px !important;
         }
 
         .mobile-col-padding {
-          padding-left: 0px !important;
-          padding-right: 0px !important;
+          padding-left: 5px !important;
+          padding-right: 5px !important;
         }
       }
 
@@ -62,6 +62,10 @@
           max-width: 100% !important;
         }
 
+        .two-columns.mobile-padding {
+          padding-left: 0 !important;
+          padding-right: 0 !important;
+        }
         .two-columns .column img {
           width: 100% !important;
           max-width: 100% !important;
@@ -91,12 +95,12 @@
       /* :root {
         color-scheme: light dark;
         supported-color-schemes: light dark;
-      } */
+      }
 
-      /* @media (prefers-color-scheme: dark) {
+      @media (prefers-color-scheme: dark) {
         table,
         td {
-          background-color: #06080B !important;
+          background-color: #06080b !important;
         }
 
         h1,
@@ -595,7 +599,241 @@
               <![endif]-->
             </td>
           </tr>
+          <!-- tree section -->
+          <tr>
+            <td>
+              <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+              >
+                <tr>
+                  <td
+                    align="left"
+                    style="padding: 12px 40px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 157%;
+                        color: #000;
+                      "
+                    >
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Sit nisl, viverra potenti sem vel nam eros neque. Nulla
+                      viverra sit feugiat volutpat in&nbsp;eros diam quam sed.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="padding: 12px 40px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 157%;
+                        color: #000;
+                      "
+                    >
+                      Fermentum ipsum justo amet, pellentesque natoque felis.
+                      Nisl, enim purus ultrices molestie nunc odio. Non pharetra
+                      quam morbi elementum porttitor neque id&nbsp;ornare
+                      turpis. Fusce nunc dui arcu placerat est. Integer
+                      malesuada id&nbsp;eu viverra morbi&nbsp;in. Vitae quam
+                      senectus nibh cursus.
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td
+              align="center"
+              style="padding: 0 0 24px 0; color: #000"
+              class="mobile-col-padding"
+            >
+              <table
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+              >
+                <tr>
+                  <td
+                    align="center"
+                    style="background: #020072; border-radius: 50px"
+                  >
+                    <a
+                      href="https://mail.ru"
+                      target="_blank"
+                      rel="noopener"
+                      style="
+                        color: #ffffff;
+                        background: #020072;
+                        border-radius: 50px;
+                        border: 1px solid #020072;
+                        font-weight: 700;
+                        font-size: 14px;
+                        line-height: 157%;
+                        text-decoration: none;
+                        display: inline-block;
+                        text-align: center;
+                        padding: 10px 420px;
+                      "
+                    >
+                      &nbsp; Dolor &nbsp;</a
+                    >
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- four section -->
+          <tr>
+            <td>
+              <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+              >
+                <tr>
+                  <td
+                    align="center"
+                    style="padding: 0 40px 24px"
+                    class="mobile-col-padding"
+                  >
+                    <img
+                      src="https://i.ibb.co/k2Jzw7TQ/img4.png"
+                      alt="img4"
+                      width="523"
+                      class="full-width"
+                    />
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="padding: 0 40px 24px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 157%;
+                      "
+                    >
+                      Morbi potenti donec ornare amet eu&nbsp;iaculis neque
+                      tristique vitae. Aliquam euismod risus euismod neque,
+                      feugiat&nbsp;ut. Amet,
+                      <a
+                        href="https://mail.ru"
+                        target="_blank"
+                        rel="noopener"
+                        style="
+                          text-decoration: underline;
+                          color: #120ecc;
+                          margin: 0;
+                          font-weight: 400;
+                          font-size: 14px;
+                          line-height: 157%;
+                        "
+                        >aliquam vulputate
+                      </a>
+                      lectus ut&nbsp;commodo. Augue nisi, etiam tortor sapien,
+                      sed parturient. Enim condimentum egestas rhoncus tincidunt
+                      senectus phasellus tempor at non. Ultricies scelerisque
+                      felis dignissim proin quis amet diam. Maecenas pulvinar
+                      quisque viverra magnis. A condimentum augue sed
+                      odio&nbsp;a. Non rhoncus ut&nbsp;urna nulla cursus dui
+                      dui. Ullamcorper
+                      <a
+                        href="https://mail.ru"
+                        target="_blank"
+                        rel="noopener"
+                        style="
+                          text-decoration: underline;
+                          color: #120ecc;
+                          margin: 0;
+                          font-weight: 400;
+                          font-size: 14px;
+                          line-height: 157%;
+                        "
+                        >mollis eget at&nbsp;nulla
+                      </a>
+                      . Cheers The Millala Team
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    align="left"
+                    style="padding: 0 40px 24px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 157%;
+                      "
+                    >
+                      Cheers <br />
+                      The Millala Team
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <!-- five section -->
+          <tr>
+            <td>
+              <table
+                width="100%"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                role="presentation"
+              >
+                <tr>
+                  <td
+                    align="center"
+                    style="padding: 0 0 20px"
+                    class="mobile-col-padding"
+                  >
+                    <p
+                      style="
+                        margin: 0;
+                        font-weight: 400;
+                        font-size: 10px;
+                        line-height: 157%;
+                      "
+                    >
+                      © 2022 Millala Inc. All rights reserved.
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
         </table>
+
         <!--[if (gte mso 9) | (IE)]>
             </td>
             </tr>
